--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: twitter_extractor
-description: A new flutter plugin project.
+description: This plugin lets you download tweets
 version: 0.0.1
+repository: https://github.com/TamilKannanCV-personal/twitter_extractor.git
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
